test/ok/int.c4
let a: int = 10;
fn foo(a: int): int {
	return a + a;
}
